<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/validte"
        android:gravity="center"
        android:background="@color/blue"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layoutDirection="rtl"
        android:textSize="22sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/line"
            android:layout_centerInParent="true"
            android:layout_height="20dp"
            android:src="@drawable/lineblue"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_toEndOf="@id/line"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            android:layout_height="20dp"
            android:src="@drawable/line"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_toStartOf="@id/line"
            android:layout_marginEnd="5dp"
            android:layout_centerInParent="true"
            android:layout_height="20dp"
            android:src="@drawable/line"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/validatef"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/valditet"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:hint="إدخال الرمز"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="تحقق"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/shapebutton"
            android:textStyle="bold"
            android:layout_height="40dp" />


    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:text="تحقق"
        android:id="@+id/valdbu"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:layout_height="40dp" />

    </LinearLayout>

</LinearLayout>
