<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/log"
        android:gravity="center"
        android:background="@color/blue"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layoutDirection="rtl"
        android:textSize="22sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
        android:layout_width="wrap_content"
            android:id="@+id/line"
        android:layout_centerInParent="true"
        android:layout_height="20dp"
        android:src="@drawable/line"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_toEndOf="@id/line"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            android:layout_height="20dp"
            android:src="@drawable/lineblue"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_toStartOf="@id/line"
            android:layout_marginEnd="5dp"
            android:layout_centerInParent="true"
            android:layout_height="20dp"
            android:src="@drawable/line"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/inlogf"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="wrap_content"
        android:textSize="@dimen/meieum"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/inlogt"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:id="@+id/countryCodeHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp_loadFullNumber"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                app:ccp_hintExampleNumber="true"
                app:ccp_countryPreference="us,in"
                app:ccp_defaultNameCode="EG"
                />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_height="70dp">

                 <TextView
                     android:layout_width="0dp"
                     android:paddingTop="5dp"
                     android:id="@+id/textcode"
                     android:layout_marginStart="20dp"
                     android:textSize="@dimen/meieum"
                     android:layout_marginTop="10dp"
                     android:textColor="@color/blacl"
                     android:layout_marginBottom="10dp"
                     android:layout_weight=".5"
                     android:layout_height="match_parent" />
                 <EditText
                     android:id="@+id/editText_loadCarrierNumber"
                     android:layout_margin="10dp"
                     android:layout_width="0dp"
                     android:layout_weight="3"
                     android:layout_height="match_parent"
                     android:editable="false"
                     android:gravity="start"
                     android:hint="رقم الهاتف المحمول"
                     android:inputType="phone"
                     android:singleLine="true"
                     android:textColor="@android:color/black" />
             </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


    <Button
        android:layout_width="match_parent"
      android:layout_margin="10dp"
        android:text="دخول "
        android:id="@+id/enter"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@color/blue"
        android:textStyle="bold"

        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
       android:layout_margin="10dp"
        android:textSize="22sp"
        android:layout_height="match_parent"
        android:text="تخطي"/>
</LinearLayout>
